Live Data/mdapipkg/unpackaged/objects/Pipeline_Snap__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_30__c</fullName>
        <label>Next 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ABC__c</fullName>
        <label>Total ABC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Saas__c</fullName>
        <label>Total Saas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>(CEILING((Day(DateValue(CreatedDate))/7)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X30_60__c</fullName>
        <label>30 - 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X60_90__c</fullName>
        <label>60-90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pipeline Snap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLS-{00000}</displayFormat>
        <label>Pipeline Snap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>